--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "axios": "^0.26.1",
     "roboto-fontface": "*",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14",
