--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "axios": "^0.26.1",
+    "moment": "^2.29.3",
     "roboto-fontface": "*",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14",
